Use 'stable' not bullseye

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: "Install acton"
         run: |
           wget -q -O - https://apt.acton-lang.io/acton.gpg | sudo apt-key add -
-          echo "deb [arch=amd64] http://apt.acton-lang.io/ bullseye main" | sudo tee /etc/apt/sources.list.d/acton.list
+          echo "deb [arch=amd64] http://apt.acton-lang.io/ stable main" | sudo tee /etc/apt/sources.list.d/acton.list
           sudo apt-get update
           sudo apt-get install -qy acton
       - name: "Build"
