For main->device->source->subscription tree actors: - Unified state management through mixin-ish classes (until actor subtyping support is added to acton) - Start when upper level has successfully intialized any required resources (e.g. source protocol connection) - At stop/close each level await lower level actors to complete stop/close. - New actors reusing the configuration key (e.g. device/source/subscription name) of a previously removed/closed actor hold off startup pending the completed closing (e.g. sink cleanup) of it's predecessor
Reset (cleanup) notification for subscription->transform->sink chains:
- Optional callback to allow awaiting e.g. sink cleanup operations before closing the originating source/subscriber

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
       - name: "Build"
         run: |
           actonc build
+      - name: "Test"
+        run: |
+          make test
 
 #  test-macos:
 #    runs-on: macos-12
