--- a/telemetrify-nso/Makefile
+++ b/telemetrify-nso/Makefile
@@ -2,7 +2,7 @@ include nidvars.mk
 
 # The default testenv should be a "quick" testenv, containing a simple test that
 # is quick to run.
-DEFAULT_TESTENV?=quick
+DEFAULT_TESTENV?=ios-xe-ipsla-mock
 
 # Include standard NID (NSO in Docker) package Makefile that defines all
 # standard make targets
@@ -22,3 +22,6 @@ prepare-telemetrify-bin:
 	cp -p ../$(OUTPUT)/bin/telemetrify.main.main packages/telemetrify/bin/
 
 .PHONY: prepare-telemetrify-bin
+
+generate-test-jobs:
+	nid/generate-test-jobs > test-jobs.yaml
