--- a/tests/tsdb-vmx/docker-compose.yml
+++ b/tests/tsdb-vmx/docker-compose.yml
@@ -34,7 +34,7 @@ services:
             - 10022:22
             - 10830:830
     nso:
-        image: telemetrify-nso/nso:6.1.4
+        image: telemetrify-nso/nso:${NSO_VERSION}
 #        build:
 #            dockerfile: ./nso.Dockerfile
         volumes:
