Update path out/(rel|dev) -> out

--- a/telemetrify-nso/Makefile
+++ b/telemetrify-nso/Makefile
@@ -8,18 +8,12 @@ DEFAULT_TESTENV?=ios-xe-ipsla-mock
 # standard make targets
 include nidpackage.mk
 
-ifeq ($(DEV),true)
-	OUTPUT=out/dev
-else
-	OUTPUT=out/rel
-endif
-
 Dockerfile: prepare-telemetrify-bin
 
 prepare-telemetrify-bin:
 	$(MAKE) -C .. build test
 	mkdir -p packages/telemetrify/bin
-	cp -p ../$(OUTPUT)/bin/telemetrify.main.main packages/telemetrify/bin/
+	cp -p ../out/bin/telemetrify.main.main packages/telemetrify/bin/
 
 .PHONY: prepare-telemetrify-bin
 
