--- a/tests/m3db/Makefile
+++ b/tests/m3db/Makefile
@@ -2,11 +2,7 @@ SHELL=/bin/bash
 SELF_DIR:=$(dir $(lastword $(MAKEFILE_LIST)))
 PROJECT_DIR:=$(realpath $(SELF_DIR)/../..)
 DOCKER_USER:=$(shell id -u):$(shell id -g)
-ifeq ($(DEV),true)
-	BUILD_PATH=$(PROJECT_DIR)/out/dev
-else
-	BUILD_PATH=$(PROJECT_DIR)/out/rel
-endif
+BUILD_PATH=$(PROJECT_DIR)/out
 NCS_D?=ncs
 
 start:
