--- a/tests/nso-replay/Makefile
+++ b/tests/nso-replay/Makefile
@@ -1,11 +1,7 @@
 SHELL=/bin/bash
 SELF_DIR:=$(dir $(lastword $(MAKEFILE_LIST)))
 PROJECT_DIR:=$(realpath $(SELF_DIR)/../..)
-ifeq ($(DEV),true)
-	BUILD_PATH=$(PROJECT_DIR)/out/dev
-else
-	BUILD_PATH=$(PROJECT_DIR)/out/rel
-endif
+BUILD_PATH=$(PROJECT_DIR)/out
 ARGS?=maapi-schema
 REPLAY?=replays/maapi-schema-ios-xr-pruned-50.raw.gz
 
