- Add basic juniper-rpc / get-interface-information to mock-netconf source - Add mock-sink with optional logging of received data trees - Add juniper-rpc-mock CI testenv skeleton - Implement schema value_to_netconf converters - Support rpc input parameters for netconf-rpc-poll - Fix SubscriberMixin source state check

--- a/telemetrify-nso/test-jobs.yaml
+++ b/telemetrify-nso/test-jobs.yaml
@@ -6,6 +6,14 @@ test-ios-xe-ipsla-mock-6.1.5:
   needs:
     - build-6.1.5
 
+test-juniper-rpc-mock-6.1.5:
+  extends: .test
+  variables:
+    TESTENV: "juniper-rpc-mock"
+    NSO_VERSION: "6.1.5"
+  needs:
+    - build-6.1.5
+
 test-vmanage-mock-6.1.5:
   extends: .test
   variables:
