--- a/telemetrify-nso/packages/telemetrify/src/Makefile
+++ b/telemetrify-nso/packages/telemetrify/src/Makefile
@@ -14,8 +14,7 @@ FXS = $(SRC:yang/%.yang=../load-dir/%.fxs)
 
 ## Uncomment and patch the line below if you have a dependency to a NED
 ## or to other YANG files
-# YANGPATH += ../../<ned-name>/src/ncsc-out/modules/yang \
-# 	../../<pkt-name>/src/yang
+YANGPATH += yang
 
 NCSCPATH   = $(YANGPATH:%=--yangpath %)
 YANGERPATH = $(YANGPATH:%=--path %)
