--- a/telemetrify-nso/testenvs/vmanage-mock/Makefile
+++ b/telemetrify-nso/testenvs/vmanage-mock/Makefile
@@ -11,7 +11,7 @@ ifeq ($(DEV),true)
 else
 	BIN_DIR=/mnt/out/rel/bin
 endif
-BIN?=acton_streamer.main.main
+BIN?=acton_streamer.main.server
 BIN_ARGS?=
 NCS_D?=ncs
 
@@ -93,7 +93,7 @@ llog:
 	docker compose exec nso bash -lc "less /log/ncs-python-vm.log"
 
 debug:
-	docker compose exec nso bash -lc "gdb -ex 'handle SIGPWR SIGXCPU nostop noprint' --args /nso/run/state/packages-in-use.cur/1/telemetrify/bin/telemetrify.main.main --rts-wthreads 1"
+	docker compose exec nso bash -lc "gdb -ex 'handle SIGPWR SIGXCPU nostop noprint' --args /nso/run/state/packages-in-use.cur/1/telemetrify/bin/telemetrify.main.server --rts-wthreads 1"
 
 .PHONY: start stop test test-debug cli log
 
