--- a/tests/nso-vmanage/Makefile
+++ b/tests/nso-vmanage/Makefile
@@ -85,7 +85,7 @@ llog:
 	docker compose exec nso bash -lc "less /log/ncs-python-vm.log"
 
 debug:
-	docker compose exec nso bash -lc "gdb -ex 'handle SIGPWR SIGXCPU nostop noprint' --args /nso/run/state/packages-in-use.cur/1/telemetrify/bin/telemetrify.main.server --rts-wthreads 1"
+	docker compose exec nso bash -lc "gdb -ex 'handle SIGPWR SIGXCPU nostop noprint' --args /nso/run/state/packages-in-use.cur/1/telemetrify/bin/telemetrify_ext.server --rts-wthreads 1"
 
 .PHONY: start stop test test-debug cli log
 
