- Transforms   - Schema-based Node -> TNode converter   - Alarm transform helper   - Transform example templates (bare/schema/alarm) - Test   - Mock netconf replay source   - Juniper interface-information rpc alarm transform

--- a/telemetrify-nid-base/telemetrify-ext/Makefile
+++ b/telemetrify-nid-base/telemetrify-ext/Makefile
@@ -9,7 +9,7 @@ test:
 .PHONY: test
 
 clean:
-	rm -rf out
+	rm -rf out .build build.zig build.zig.zon
 	for dep in deps/*/; do \
 		$(MAKE) -C $${dep} clean; \
 	done;
