--- a/tests/vr-vmx/Makefile
+++ b/tests/vr-vmx/Makefile
@@ -9,7 +9,7 @@ TESTENV:=$(shell basename $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST
 SHELL=/bin/bash
 SELF_DIR:=$(dir $(firstword $(MAKEFILE_LIST)))
 PROJECT_DIR:=$(realpath $(SELF_DIR)/../..)
-BUILD_PATH=$(PROJECT_DIR)/out
+BUILD_PATH=$(PROJECT_DIR)/telemetrify-core/out
 ARGS?=netconf-client-vr-vmx
 CNT_PREFIX?=test-$(TESTENV)-$(shell whoami)
 VR_NAME?=vmx1
