--- a/telemetrify-nso/testenvs/vmanage-mock/docker-compose.yml
+++ b/telemetrify-nso/testenvs/vmanage-mock/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.3"
 services:
     # m3db:
     #     image: quay.io/m3db/m3dbnode:v1.1.0
@@ -39,14 +38,14 @@ services:
     #         - "com.cisco.nso.testenv.name=${CNT_PREFIX}"
 
     nso:
-        image: ${IMAGE_BASENAME}/nso-testenv-ios-xe-ipsla-mock:${DOCKER_TAG}
+        image: ${IMAGE_BASENAME}/nso-testenv-vmanage-mock:${DOCKER_TAG}
         build:
             dockerfile: ./nso.Dockerfile
             args:
                 IMAGE_BASENAME: ${IMAGE_BASENAME}
                 DOCKER_TAG: ${DOCKER_TAG}
         container_name: ${CNT_PREFIX}-nso-1
-        hostname: ${CNT_PREFIX}-nso-1
+        hostname: nso-1
         networks:
             - network-1
         volumes:
