--- a/telemetrify-nso/Makefile
+++ b/telemetrify-nso/Makefile
@@ -8,23 +8,27 @@ DEFAULT_TESTENV?=ios-xe-ipsla-mock
 # standard make targets
 include nidpackage.mk
 
+ACTON_CMD_PATH := $(shell which acton)
+ifeq ($(ACTON_CMD_PATH),)
+  $(error Acton compiler not found. Please run ./actup to install Acton locally in this project or see https://www.acton-lang.org/install/ for more options)
+endif
+ACTON_DIST_PATH := $(abspath $(dir $(ACTON_CMD_PATH))..)
+
 Dockerfile: prepare-telemetrify
 
 prepare-telemetrify:
+	mkdir -p acton
+	if [ -n "$$(which rsyncx)" ]; then rsync -avE $(ACTON_DIST_PATH)/. acton; else cp -rp $(ACTON_DIST_PATH)/. acton; fi
 	cp -rp ../telemetrify-nid-base/. .
 	cp -rp telemetrify-nid-addon/. .
-	mkdir -p telemetrify-ext/deps/telemetrify_core
-	cp -rp ../telemetrify-core/. telemetrify-ext/deps/telemetrify_core # Workaround https://github.com/actonlang/acton/issues/1886
-	$(MAKE) -f telemetrify-ext.mk prepare-telemetrify-pkg
+	mkdir -p packages/telemetrify/src/acton/telemetrify-ext/deps/telemetrify_core
+	cp -rp ../telemetrify-core/. packages/telemetrify/src/acton/telemetrify-ext/deps/telemetrify_core # Workaround https://github.com/actonlang/acton/issues/1886
 
 .PHONY: prepare-telemetrify
 
 clean-telemetrify:
-	@echo "Run delete target only as a basic test if files are present"
-	-[ -d telemetrify-ext ] && $(MAKE) -f telemetrify-ext.mk clean-telemetrify-pkg
+	rm -rf acton
 	rm -rf packages/telemetrify
-	rm -rf telemetrify-ext
-	rm -f telemetrify-ext.mk
 
 .PHONY: clean-telemetrify
 
