--- a/telemetrify-nso/.gitlab-ci.yml
+++ b/telemetrify-nso/.gitlab-ci.yml
@@ -52,7 +52,7 @@ before_script:
   - *helper_mark_section
   - mark_section_start initialize Initializing
   - which curl docker expect gpg2 sshpass xmlstarlet >/dev/null || (echo "Installing prerequisites..." && apt-get -y update && DEBIAN_FRONTEND=noninteractive apt-get install -qy apt-transport-https ca-certificates curl expect gnupg2 software-properties-common sshpass xmlstarlet; which docker || (echo "Installing docker..." && curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - && apt-key fingerprint 0EBFCD88 && add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" && apt-get -y update && apt-get -qy install -qy docker-ce docker-ce-cli containerd.io))
-  - which actonc >/dev/null || (echo "Installing acton..." && curl -sS https://apt.acton-lang.io/acton.gpg | apt-key add - && echo "deb [arch=amd64] http://apt.acton-lang.io/ stable main" | tee /etc/apt/sources.list.d/acton.list && apt-get update && apt-get install -qy acton)
+  - which actonc >/dev/null || (echo "Installing acton..." && curl -sS https://apt.acton-lang.io/acton.gpg | apt-key add - && echo "deb [arch=amd64] http://aptip.acton-lang.io/ tip main" | tee /etc/apt/sources.list.d/acton.list && apt-get update && apt-get install -qy acton)
   - mark_section_end initialize
 
 
@@ -63,6 +63,9 @@ before_script:
     variables:
       - $CI_MODE == "mirror"
   script:
+    # Test telemetrify-core
+    - make -C telemetrify-core test
+    - make -C telemetrify-core clean
     # The NID project skeleton is in the telemetrify-nso directory
     - cd telemetrify-nso
     - if [ -n "${CI_DOCKER_USER}" ]; then echo "Using provided credentials for authentication with docker registry"; docker login -u ${CI_DOCKER_USER} -p ${CI_DOCKER_PASSWORD} ${CI_REGISTRY}; else docker login -u gitlab-ci-token -p ${CI_JOB_TOKEN} ${CI_REGISTRY}; fi
